[Fixes #890] Move to JDK 17 as the baseline - no special Maven profiles needed