@@ -54,6 +54,7 @@
 
     <module>it/core</module>
     <module>it/war</module>
+    <module>it/osgi</module>
 
     <module>client/java</module>
     <module>client/javascript</module>
@@ -62,9 +63,13 @@
     <module>client/kubernetes</module>
 
     <module>support/jmx</module>
+    <module>support/spring</module>
 
     <module>examples/osgi-restrictor</module>
     <module>examples/client-javascript-test-app</module>
+    <module>examples/spring</module>
+    <module>examples/spring-boot</module>
+    <module>examples/spring-boot-actuator</module>
   </modules>
 
   <build>
@@ -1234,67 +1239,6 @@
   </properties>
 
   <profiles>
-
-    <profile>
-      <id>jdk17</id>
-      <activation>
-        <jdk>[17,)</jdk>
-      </activation>
-      <modules>
-        <module>support/spring</module>
-        <module>examples/spring</module>
-        <module>examples/spring-boot</module>
-        <module>examples/spring-boot-actuator</module>
-        <module>it/osgi</module>
-      </modules>
-    </profile>
-
-    <profile>
-      <id>jdk11-16</id>
-      <activation>
-        <jdk>[11,17)</jdk>
-      </activation>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <version>${plugin.maven-surefire-plugin}</version>
-              <configuration>
-                <argLine>
-                  --illegal-access=deny
-                  --add-opens java.management/javax.management.modelmbean=ALL-UNNAMED
-                </argLine>
-              </configuration>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
-
-    <profile>
-      <id>jdk17-23</id>
-      <activation>
-        <jdk>[17,24)</jdk>
-      </activation>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <version>${plugin.maven-surefire-plugin}</version>
-              <configuration>
-                <argLine>
-                  --add-opens java.management/javax.management.modelmbean=ALL-UNNAMED
-                </argLine>
-              </configuration>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
 
     <profile>
       <!-- Distribution to Maven Central. This is default deployment target -->
